Fixed FlounderDropdown spacing

--- a/src/FlounderDropdown/flounderDropdown.css
+++ b/src/FlounderDropdown/flounderDropdown.css
@@ -102,7 +102,7 @@
     {
         position:       absolute;
 
-        top:            calc( 100% + 10px );
+        top:            calc( 100% + var( --spacing-1 ) );
         left:           calc( -1 * var( --borderWidth ) );
 
         width:          calc( 100% + ( var( --borderWidth ) * 2 ) );
@@ -583,9 +583,9 @@
     &.error .main,
     .main.disabled
     {
-        border-color:   transparent !important; /* yes, always */
-        background:     transparent !important; /* yes, always */
-        box-shadow:     none !important; /* yes, always */
+        border:     none !important; /* yes, always */
+        background: transparent !important; /* yes, always */
+        box-shadow: none !important; /* yes, always */
     }
 
     .main
